Fixed a bug in the navbar This commit fixes a bug in the dropdown menu of the navbar, wich was not displaying correctly when the navbar was collapsed. Now the dropdown only shows when the navbar is expanded.

--- a/Views/assets/css/navbar.css
+++ b/Views/assets/css/navbar.css
@@ -51,8 +51,9 @@ body {
     
 }
 
+
 main {
-    margin-left: 60px; /* Ajuste cuando el menú está colapsado */
+    margin-left: 250px; /* Ajuste cuando el menú está colapsado */
     padding: 20px;
     transition: margin-left 0.3s ease;
     width: 100%;
